# aa-ma-securegroups

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dangerfile  MANIFEST.in  Makefile  README.md  pyproject.toml  runtests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: automated-checks.yml
memberaudit_securegroups/: __init__.py  admin.py  app_settings.py  apps.py  auth_hooks.py  memberaudit.py  models.py  tests.py
memberaudit_securegroups/locale/: django.pot
memberaudit_securegroups/locale/cs/LC_MESSAGES/: django.po
memberaudit_securegroups/locale/cs_CZ/LC_MESSAGES/: django.mo  django.po
memberaudit_securegroups/locale/de/LC_MESSAGES/: django.mo  django.po
memberaudit_securegroups/locale/es/LC_MESSAGES/: django.mo  django.po
memberaudit_securegroups/locale/fr_FR/LC_MESSAGES/: django.mo  django.po
memberaudit_securegroups/locale/it_IT/LC_MESSAGES/: django.mo  django.po
memberaudit_securegroups/locale/ja/LC_MESSAGES/: django.mo  django.po
memberaudit_securegroups/locale/ko_KR/LC_MESSAGES/: django.mo  django.po
memberaudit_securegroups/locale/nl/LC_MESSAGES/: django.mo  django.po
memberaudit_securegroups/locale/nl_NL/LC_MESSAGES/: django.po
memberaudit_securegroups/locale/pl_PL/LC_MESSAGES/: django.mo  django.po
memberaudit_securegroups/locale/ru/LC_MESSAGES/: django.mo  django.po
memberaudit_securegroups/locale/sk/LC_MESSAGES/: django.mo  django.po
memberaudit_securegroups/locale/uk/LC_MESSAGES/: django.mo  django.po
memberaudit_securegroups/locale/zh_Hans/LC_MESSAGES/: django.mo  django.po
memberaudit_securegroups/migrations/: 0001_initial.py  0002_alter_skillpointfilter_skill_point_threshold_and_more.py  0002_auto_20210105_1644.py  0003_add_corporation_role_filter_and_more.py  0004_timeincorporationfilter_corporationtitlefilter.py  0005_alter_corporationrolefilter_role.py  0006_alter_meta_options.py  0006_compliance_reverse_logic_and_filter_names.py  0007_compliancefilter_reversed_logic.py  0007_timeincorporationfilter_reversed_logic.py  0008_homestationfilter.py  0009_alter_compliancefilter_reversed_logic.py  0009_visibilityfilter.py
memberaudit_securegroups/tests/: factories.py  test_admin.py  test_integration.py  test_memberaudit.py  test_models.py
testauth/: local.py  settings.py  urls.py
testauth/settings/: base.py  local.py
testauth/settings/testing/: local.py
