[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
]

[project]
name = "aa-memberaudit-secure-groups"
description = "Member Audit Secure Groups integration for Alliance Auth"
readme = "README.md"
keywords = [
    "allianceauth",
    "memberaudit",
    "securegroups",
]
license = {file = "LICENSE"}
maintainers = [
    { name = "Peter Pfeufer", email = "develop@ppfeufer.de" },
]
authors = [
    { name = "Peter Pfeufer", email = "develop@ppfeufer.de" },
    { name = "Erik Kalkoken", email = "kalkoken87@gmail.com" },
    { name = "Rebecca Murphy", email = "rebecca@rcmurphy.me" },
]
requires-python = ">=3.8"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dynamic = [
    "version",
]
dependencies = [
    "aa-memberaudit>=3.3.1",
    "allianceauth>=3",
    "allianceauth-securegroups>=0.5.1",
]
[project.optional-dependencies]
tests-allianceauth-stable = [
    "coverage",
    "django-webtest",
]
[project.urls]
Changelog = "https://github.com/ppfeufer/aa-memberaudit-secure-groups/blob/master/CHANGELOG.md"
Documentation = "https://github.com/ppfeufer/aa-memberaudit-secure-groups/blob/master/README.md"
Homepage = "https://github.com/ppfeufer/aa-memberaudit-secure-groups"
Source = "https://github.com/ppfeufer/aa-memberaudit-secure-groups.git"
Tracker = "https://github.com/ppfeufer/aa-memberaudit-secure-groups/issues"

[tool.hatch.build]
include = [
    "/memberaudit_securegroups",
]

[tool.hatch.version]
path = "memberaudit_securegroups/__init__.py"
