[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
]

[project]
name = "aa-ma-securegroups"
description = "Member Audit Secure Groups integration for Alliance Auth"
readme = "README.md"
keywords = [
    "allianceauth",
    "memberaudit",
    "securegroups",
]
license = {file = "LICENSE"}
maintainers = [
    { name = "Peter Pfeufer", email = "develop@ppfeufer.de" },
]
authors = [
    { name = "Peter Pfeufer", email = "develop@ppfeufer.de" },
    { name = "Erik Kalkoken", email = "kalkoken87@gmail.com" },
    { name = "Rebecca Murphy", email = "rebecca@rcmurphy.me" },
]
requires-python = ">=3.8"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dynamic = [
    "version",
]
dependencies = [
    "aa-memberaudit>=3.3.1",
    "allianceauth<5.0.0,>=4",
    "allianceauth-securegroups>=0.5.1",
]
[project.optional-dependencies]
tests-allianceauth-latest = [
    "coverage",
    "django-webtest",
]
[project.urls]
Changelog = "https://github.com/ppfeufer/aa-ma-securegroups/blob/master/CHANGELOG.md"
Documentation = "https://github.com/ppfeufer/aa-ma-securegroups/blob/master/README.md"
Homepage = "https://github.com/ppfeufer/aa-ma-securegroups"
Source = "https://github.com/ppfeufer/aa-ma-securegroups.git"
Tracker = "https://github.com/ppfeufer/aa-ma-securegroups/issues"

[tool.hatch.build]
include = [
    "/memberaudit_securegroups",
]

[tool.hatch.version]
path = "memberaudit_securegroups/__init__.py"
