[metadata]
name = aa_memberaudit_secure_groups
version = attr: memberaudit_securegroups.__version__
description = Member Audit Secure Groups integration for Alliance Auth
long_description = file: README.md
long_description_content_type = text/markdown
author = Peter Pfeufer
author_email = develop@ppfeufer.de
maintainer = Peter Pfeufer
maintainer_email = develop@ppfeufer.de
license = GPL-3.0
license_file = LICENSE
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
home_page = https://github.com/ppfeufer/aa-memberaudit-secure-groups
keywords =
    allianceauth
    memberaudit
    securegroups
project_urls =
    Issue / Bug Reports = https://github.com/ppfeufer/aa-memberaudit-secure-groups/issues
    Changelog = https://github.com/ppfeufer/aa-memberaudit-secure-groups/blob/master/CHANGELOG.md

[options]
packages = find_namespace:
install_requires =
    aa-memberaudit>=1.15.1
    allianceauth>=2.15.1
    allianceauth-securegroups>=0.2.1
python_requires = ~=3.8
include_package_data = True
zip_safe = False

[options.packages.find]
include = memberaudit_securegroups*

[options.package_data]
* = *
